fixed pmd violations